message MSG_DC_DM_CONFIG_LOOKUP
{
    optional string domainName = 1;
}

message MSG_DM_DC_CONFIG_LOOKUP_ACK
{
    optional int32 statusCode = 1;
    repeated string raIp = 2;
}