message MSG_CLIENT_DM_DOMAIN_DESTORY
{
    optional string token = 1;
    optional string domainName = 2;
}

message MSG_DM_CLIENT_DOMAIN_DESTORY_ACK
{
    optional int32 statusCode = 1;
}